[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "continuous-monitoring-dashboard"
version = "0.1.0"
description = "A FedRAMP Continuous Monitoring (ConMon) dashboard simulating control health, POA&M aging, vulnerability trends, and compliance drift."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Continuous Monitoring Dashboard Contributors" }]
keywords = ["fedramp", "conmon", "oscal", "nist-800-53", "grc", "compliance", "poam", "streamlit"]
dependencies = [
    "streamlit>=1.32",
    "pandas>=2.1",
    "numpy>=1.26",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.3"]

[project.scripts]
conmon-export-oscal = "conmon.cli:main"

[tool.setuptools.packages.find]
include = ["conmon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
